syntax = "proto3";
package chain4energy.c4echain.cfevesting;

import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/chain4energy/c4e-chain/x/cfevesting/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateVestingPool (MsgCreateVestingPool) returns (MsgCreateVestingPoolResponse);
  rpc WithdrawAllAvailable(MsgWithdrawAllAvailable) returns (MsgWithdrawAllAvailableResponse);
  rpc CreateVestingAccount(MsgCreateVestingAccount) returns (MsgCreateVestingAccountResponse);
  rpc SendToVestingAccount(MsgSendToVestingAccount) returns (MsgSendToVestingAccountResponse);
  rpc SplitVesting(MsgSplitVesting) returns (MsgSplitVestingResponse);
  rpc MoveAvailableVesting(MsgMoveAvailableVesting) returns (MsgMoveAvailableVestingResponse);
  rpc MoveAvailableVestingByDenoms(MsgMoveAvailableVestingByDenoms) returns (MsgMoveAvailableVestingByDenomsResponse);
  rpc UpdateDenomParam(MsgUpdateDenomParam) returns (MsgUpdateDenomParamResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateVestingPool {
  string owner = 1;
  string name = 3;
  string amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  google.protobuf.Duration duration = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  string vesting_type = 6;
}

message MsgCreateVestingPoolResponse {}

message MsgWithdrawAllAvailable {
  string owner = 1;
}

message MsgWithdrawAllAvailableResponse {
  string withdrawn = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin",
    (gogoproto.nullable) = false
  ];
}

message MsgCreateVestingAccount {
  string from_address = 1 [
    (gogoproto.moretags) = "yaml:\"from_address\""
  ];
  string to_address = 2 [
    (gogoproto.moretags) = "yaml:\"to_address\""
  ];
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64 start_time = 4 [
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  int64 end_time = 5 [
    (gogoproto.moretags) = "yaml:\"end_time\""
  ];
}

message MsgCreateVestingAccountResponse {}

message MsgSendToVestingAccount {
  string owner = 1;
  string to_address = 2;
  string vesting_pool_name = 3;
  string amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  bool restart_vesting = 5;
}

message MsgSendToVestingAccountResponse {}

message MsgSplitVesting {
  string from_address = 1;
  string to_address = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3
  [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message MsgSplitVestingResponse {
}

message MsgMoveAvailableVesting {
  string from_address = 1;
  string to_address = 2;
}

message MsgMoveAvailableVestingResponse {
}

message MsgMoveAvailableVestingByDenoms {
  string from_address = 1;
  string to_address = 2;
  repeated string denoms = 3;
}

message MsgMoveAvailableVestingByDenomsResponse {
}

// this line is used by starport scaffolding # proto/tx/message

message MsgUpdateDenomParam {
  // authority is the address of the governance account.
  string authority = 1;
  string denom = 2;
}

message MsgUpdateDenomParamResponse {}